<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CommentMag</string>
      <string name="hello_world">Hello World !</string>
        <string name="hello">Hello</string>
    <string name="action_settings">Settings</string>

        <string name="addMag">Ajouter un nouveau magazine</string>
    
    <string name="new_mag">Nouveau Magazine</string>
    <string name="name">Nom:</string>
    <string name="nom_mag">Nom du magazine</string>
    <string name="prix">Prix:</string>
 
    <string name="rate">Niveau:</string>
    <string name="commentaire">Commentaire:</string>
    
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    
    <string name="detail_mag">Détail magazine</string>

    <string name="title_activity_commentaire">CommentaireActivity</string>
    <string name="theme">Theme</string>
    <string name="musique">musique</string>
    <string name="TV">TV</string>
    <string name="maison">maison</string>
    <string name="jardin">jardin</string>
    <string name="inscription">Inscription</string>
    <string name="ajouterCommentaire">Ajouter</string>
    <string name="supprimerCommentaire">Supprimer un commentaire</string>
    <string name="validerlemagazine">Enregistrer</string>
    <string name="echelle">Echelle</string>
    <string name="numero">numéro</string>
    <string name="article">Article</string>
    <string name="page">Page</string>
    <string name="niveau">Niveau</string>
    <string name="edition">edition</string>
    <string name="title_activity_magazines">MagazinesActivity</string>
    <string name="ajouterUnMagazine">Ajouter un magazine</string>
    <string name="edit">Edit</string>
    

</resources>